--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,8 +1,8 @@
 .login-form {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
   margin-top: 100px;
 }
 .login-form > input {
@@ -19,10 +19,12 @@
   padding: 8px 16px;
   border-radius: 4px;
   border: none;
-  background-color: rgb(18, 119, 114);
+  background-color: teal;
   color: white;
   font-size: 18px;
-  font-weight: 400;
+  font-weight: 500;
+  margin: 0;
+  margin-bottom: 10px;
 }
 .login-button:hover {
   background-color: white;
